Update Gradle build workflow: add version handling for workflow dispatch and release events, update default version to snapshot.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-default = "0.1.4"
+default = "0.0.0-SNAPSHOT"
 from_env = "VERSION"
 group_id = "community.flock.kotlinx.openapi.bindings"
 java = "17"
